--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,7 @@ Next version (not yet released)
  * [Standalone] Fixes starting Passenger as a non-extant user. Closes GH-1849.
  * Improved look of the error pages for failing to spawn an application (development & production mode), and Error ID is now also shown in production mode.
  * [Standalone] Enable ipv6 support by default in builtin nginx. Closes GH-1873.
+ * Allow prespawn to start app when address bound to non-localhost ip.
 
 
 Release 5.0.30
